# FW-Challenge

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION.md  Kconfig  PROJECT_OVERVIEW.txt  QUICKSTART.md  README.md  SUMMARY.md  prj.conf  sample.yaml  verify.sh
app/: CMakeLists.txt  Kconfig  README.md  ScreenRecording_link.txt  overlay-no-ble.conf  prj.conf  sample.yaml
app/include/: app.h  app_events.h  app_uuids.h  ble.h  status_led.h
app/include/boards/: disable_ble.overlay  native_sim.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  nrf5340dk_nrf5340_cpuapp.overlay
app/include/dts/bindings/: mycompany,myapp.yaml
app/src/: adc_sampler.c  app_events.c  ble.c  buttons.c  main.c  status_led.c  watchdog.c
src/: battery_service.c  battery_service.h  main.c
